# esp32_bridge

./: .gitignore  CMakeLists.txt  LICENSE  README.md  design.md  instruct.md  sdkconfig.defaults
components/battery/: CMakeLists.txt
components/battery/include/: battery_manager.h
components/battery/src/: battery_manager.cpp
components/common/: CMakeLists.txt  event_system.cpp
components/common/include/: event_system.h
components/device/: CMakeLists.txt  device_manager.cpp  uart_device.cpp
components/device/include/: device.h  device_manager.h  uart_device.h
components/network/: CMakeLists.txt
components/network/include/: network_module.h
components/network/src/: network_module.cpp
components/pmu/: CMakeLists.txt
components/pmu/include/: pmu.h
components/pmu/src/: pmu.cpp
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
test_server/: tcp_client_readme.md  tcp_client_test.py  tcp_server.py  tcp_server_readme.md  tcp_server_test.py
